Updated tracking script.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         x.type = m
         x.async = 1
         i.appendChild(x)
-      })(document, 'body', 'script', 'module', './dist/jobmatix-pixel.js', '[replace-appId]')
+      })(document, 'body', 'script', 'module', 'https://unpkg.com/jobmatix-pixel/tracker/script.js', '[replace-appId]')
     </script>
   </body>
 </html>
