--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
 <body>
 <script type="text/javascript" async>
   //Variant 1
-  ((j,o,b,m,a,t,i,x)=>{j[m]||(j[m]=function(){(j[m].q=j[m].q||[]).push(arguments)},
-          j[m].q=j[m].q||[],i=o.getElementsByTagName(b)[0],x=o.createElement(b),
-          x.id=t,x.src=a,x.async=1,i.parentNode.insertBefore(x,i))
-  })(window,document,'script','jobmatix','./script.min.js','[replace-appId]');
+  // ((j,o,b,m,a,t,i,x)=>{j[m]||(j[m]=function(){(j[m].q=j[m].q||[]).push(arguments)},
+  //         j[m].q=j[m].q||[],i=o.getElementsByTagName(b)[0],x=o.createElement(b),
+  //         x.id=t,x.src=a,x.async=1,i.parentNode.insertBefore(x,i))
+  // })(window,document,'script','jobmatix','./script.min.js','[replace-appId]');
 
   // Variant 2:
-  // ((j, o, b, m, a, t, i, x) => {
-  //   j[m] || (j[m] = function() {(j[m].q = j[m].q || []).push(arguments)},
-  //           j[m].q = j[m].q || [], i = o.getElementsByTagName(b)[0], x = o.createElement(b),
-  //           j[m].p = t, x.src = a, x.async = 1, i.parentNode.insertBefore(x, i))
-  // })(window, document, 'script', 'jobmatix', './script.min.js', {
-  //   pixel_id: '1234567890',
-  //   domain_name: 'https://jobmatix.io',
-  //   environment: 'uat',
-  // })
+  ((j, o, b, m, a, t, i, x) => {
+    j[m] || (j[m] = function() {(j[m].q = j[m].q || []).push(arguments)},
+            j[m].q = j[m].q || [], i = o.getElementsByTagName(b)[0], x = o.createElement(b),
+            j[m].p = t, x.src = a, x.async = 1, i.parentNode.insertBefore(x, i))
+  })(window, document, 'script', 'jobmatix', './script.min.js', {
+    pixel_id: '1234567890',
+    domain_name: 'https://jobmatix.io',
+    environment: 'uat',
+  })
   //
   // jobmatix('enableActivityTracking', { minimumVisitLength: 10, heartbeatDelay: 10 })
   // jobmatix('enableLinkClickTracking')
